Add license and README for Villages plugin
- Added MIT License file to the project.
- Created README.md with detailed plugin overview, features, installation instructions, and usage guidelines.
- Updated SignManager to improve sign placement logic for better aesthetics and functionality.
- Modified plugin.yml to include project website link.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,4 @@ main: org.clockworx.villages.VillagesPlugin
 api-version: '1.21.11'
 description: Paper Enhanced Villages
 author: RADawson
+website: https://github.com/radawson/villages
