Enhance build configuration and version management
- Added paperweight dependency for PaperMC development bundle in build.gradle.kts.
- Introduced a new Gradle task 'processVersion' to replace version placeholders in source and resource files.
- Updated dependencies to use single-string notation for compatibility with future Gradle versions.
- Added gradlew and gradlew.bat scripts for easier Gradle execution.
- Created CI and release workflows for automated builds and versioning on GitHub.
- Updated version placeholders in plugin.yml and paper-plugin.yml to reflect the new versioning strategy.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Villages
-version: ${version}
+version: 0.1.0
 main: org.clockworx.villages.VillagesPlugin
 api-version: '1.21.11'
 description: Paper Enhanced Villages
