--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,5 +1,5 @@
 name: Villages
-version: ${version}
+version: 0.1.0
 main: org.clockworx.villages.VillagesPlugin
 description: Paper Enhanced Villages
 api-version: '1.21.11'
