Update Gradle properties and increment version to 0.1.1
- Enabled Gradle daemon and parallel execution for improved build performance.
- Increased JVM memory settings for better resource management.
- Updated project version to 0.1.1.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,5 @@
-version=0.1.0
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx4g -Xms1g -XX\:MaxMetaspaceSize\=512m -XX\:+UseG1GC
+org.gradle.parallel=true
+org.gradle.workers.max=12
+version=0.1.1
