Implement village naming feature and update version to 0.1.2
- Added /village name <name> command for players to name villages using CommandAPI.
- Integrated CommandAPI for improved command handling and validation.
- Updated SignManager to display village names on signs instead of UUIDs.
- Enhanced VillageManager to store and retrieve village names in Persistent Data Container (PDC).
- Updated build.gradle.kts to include CommandAPI as a local dependency.
- Incremented project version to 0.1.2 in gradle.properties and plugin metadata files.
- Created changelog and command system guide documentation for better user understanding.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x gradlew
       
-      - name: Build with Gradle
-        run: ./gradlew build
+      - name: Build shadow JAR
+        run: ./gradlew shadowJar
       
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
