Refactor version management and update build configuration
- Replaced the custom 'processVersion' task with built-in Gradle functionality to handle version placeholders in resource files.
- Updated plugin.yml and paper-plugin.yml to use ${version} for dynamic versioning.
- Enhanced the VillagesPlugin class to initialize and unregister CommandAPI properly during plugin lifecycle.
- Adjusted build.gradle.kts to exclude unnecessary files from the final JAR and ensure correct resource processing.
- Changed Gradle version in cache.properties to 8.9 for compatibility.

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,5 +1,5 @@
 name: Villages
-version: 0.1.1
+version: ${version}
 main: org.clockworx.villages.VillagesPlugin
 description: Paper Enhanced Villages
 api-version: '1.21.11'
