Update to version 0.2.0 with major architecture enhancements
- Introduced a comprehensive storage system supporting YAML, SQLite, and MySQL backends for village data management.
- Implemented a new village boundary calculation mechanism using Minecraft's native POI system for accurate boundary detection.
- Added region management integration with WorldGuard and RegionGuard for enhanced village protection features.
- Extended command functionality for village management, including commands for migration and backup of village data.
- Updated documentation to reflect new features and architecture, including detailed guides on installation and region integration.
- Added new dependencies for SQLite and HikariCP to improve database handling.
- Enhanced README and CHANGELOG to provide clearer project insights and version history.

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,5 +1,18 @@
 name: Villages
 version: ${version}
 main: org.clockworx.villages.VillagesPlugin
-description: Paper Enhanced Villages
+description: Paper Enhanced Villages - Boundary calculation, region protection, welcome signs
 api-version: '1.21.11'
+
+# Soft dependencies - these plugins are optional but enhanced if present
+dependencies:
+  server:
+    WorldGuard:
+      load: BEFORE
+      required: false
+    WorldEdit:
+      load: BEFORE
+      required: false
+    RegionGuard:
+      load: BEFORE
+      required: false
