Implement VillagesPluginBootstrap for improved initialization and logging
- Introduced a new bootstrapper class, VillagesPluginBootstrap, to handle the initialization of core components (ConfigManager and PluginLogger) before the plugin is created.
- Updated VillagesPlugin to utilize the bootstrapper, allowing for better management of configuration and logging during the plugin lifecycle.
- Enhanced null checks for PluginLogger to prevent potential NullPointerExceptions during logging operations.
- Modified ConfigManager to allow setting the logger after its creation, ensuring proper logging functionality.
- Updated paper-plugin.yml to specify the new bootstrapper class for the plugin.

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -3,6 +3,7 @@ version: ${version}
 main: org.clockworx.villages.VillagesPlugin
 description: Paper Enhanced Villages - Boundary calculation, region protection, welcome signs
 api-version: '1.21.11'
+bootstrapper: org.clockworx.villages.VillagesPluginBootstrap
 
 # Soft dependencies - these plugins are optional but enhanced if present
 dependencies:
