Fix CI: Download CommandAPI JAR during build
The CommandAPI shade JAR is not committed to the repo (to avoid binaries).
This adds a step to download it from Hangar before building.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,13 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x gradlew
       
+      - name: Download CommandAPI dependency
+        run: |
+          mkdir -p libs
+          curl -L -o libs/commandapi-bukkit-shade-11.1.0.jar \
+            "https://hangarcdn.papermc.io/plugins/Skepter/CommandAPI/versions/11.1.0/PAPER/CommandAPI-11.1.0-Paper.jar"
+          ls -la libs/
+      
       - name: Extract version from tag
         id: tag_version
         run: |
