Update to version 0.2.3 with file logging enhancements
- Introduced file-based logging, allowing all log messages to be written to log files in addition to the console.
- Implemented daily and size-based log rotation for log files, with automatic cleanup of old logs.
- Added configuration options for file logging in `config.yml`, including log directory, maximum file size, and retention settings.
- Enhanced `PluginLogger` with new methods for managing file logging and ensuring thread-safe operations.
- Updated documentation to reflect new logging features and configuration details.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -133,6 +133,30 @@ performance:
   async-storage: true
 
 # =============================================================================
+# Logging
+# =============================================================================
+# Settings for file-based logging output.
+
+logging:
+  file:
+    # Enable file logging (in addition to console)
+    enabled: true
+    
+    # Directory for log files (under plugins/Villages/)
+    directory: logs
+    
+    # Maximum size of a single log file in MB before rotation
+    max-file-size-mb: 10
+    
+    # Maximum number of log files to keep (0 = unlimited)
+    # Oldest files are deleted when this limit is exceeded
+    max-files: 14
+    
+    # Include debug messages in file output
+    # If false, only INFO, WARNING, and SEVERE are written to file
+    include-debug: true
+
+# =============================================================================
 # Debug
 # =============================================================================
 # Settings for debugging and development.
