Add periodic village recheck system and update documentation
- Introduced a new periodic recheck system that scans loaded chunks for bells, merges them into existing villages, and recalculates boundaries to account for changes.
- Added configuration options for the recheck interval in `config.yml`, with a default of 72000 ticks (1 hour).
- Updated architecture and installation documentation to detail the functionality and performance considerations of the recheck system.
- Enhanced the changelog to reflect the new features and their impact on village management.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -69,6 +69,8 @@ detection:
   
   # Recalculate village boundaries periodically (in ticks, 0 to disable)
   # 72000 ticks = 1 hour
+  # During recheck: scans loaded chunks for bells, merges them into existing villages,
+  # and recalculates boundaries to catch POI changes
   recalculate-interval: 72000
   
   # Minimum distance between village bells to be considered separate villages
